--- a/browser.html
+++ b/browser.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
+        <script src="./js/browser/base.js"></script>
     </head>
     <body>
         
