--- a/browser.html
+++ b/browser.html
@@ -8,8 +8,8 @@
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/browser/base.js"></script>
+        <script src="./js/browser/addressBar.js"></script>
     </head>
-    <body>
-        
+    <body style="background-color: black;">
     </body>
 </html>
