--- a/browser.html
+++ b/browser.html
@@ -10,6 +10,5 @@
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/addressBar.js"></script>
     </head>
-    <body style="background-color: black;">
-    </body>
+    <body style="background-color: black;"></body>
 </html>
