--- a/browser.html
+++ b/browser.html
@@ -10,5 +10,5 @@
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/addressBar.js"></script>
     </head>
-    <body style="background-color: black;"></body>
+    <body style="background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></body>
 </html>
