--- a/browser.html
+++ b/browser.html
@@ -10,5 +10,8 @@
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/addressBar.js"></script>
     </head>
-    <body style="background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></body>
+    <body>
+        <div id="appstart" style="min-height: 100%; min-width: 100%; position: fixed; background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></div>
+        <div id="browser"></div>
+    </body>
 </html>
