--- a/browser.html
+++ b/browser.html
@@ -9,6 +9,7 @@
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/addressBar.js"></script>
+        <script src="./js/browser/browser.js"></script>
     </head>
     <body>
         <div id="appstart" style="min-height: 100%; min-width: 100%; position: fixed; background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></div>
