--- a/browser.html
+++ b/browser.html
@@ -12,7 +12,7 @@
         <script src="./js/browser/browser.js"></script>
     </head>
     <body>
-        <div id="appstart" style="min-height: 100%; min-width: 100%; position: fixed; background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></div>
+        <div id="appstart" style="z-index: 100000000000; min-height: 100%; min-width: 100%; position: fixed; background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></div>
         <div id="browser"></div>
     </body>
 </html>
