--- a/browser.html
+++ b/browser.html
@@ -6,6 +6,7 @@
         <link rel="preload" href="./css/bootstrap.min.css" as="style">
         <link rel="stylesheet" href="./css/bootstrap.min.css">
         <script src="./js/jquery.min.js"></script>
+        <script src="./js/resolution.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/addressBar.js"></script>
