address bar prepare

--- a/browser.html
+++ b/browser.html
@@ -5,6 +5,8 @@
         <title>FlipClip Browser</title>
         <link rel="preload" href="./css/bootstrap.min.css" as="style">
         <link rel="stylesheet" href="./css/bootstrap.min.css">
+        <link rel="preload" href="./css/all.min.css" as="style">
+        <link rel="stylesheet" href="./css/all.min.css">
         <link rel="preload" href="./css/browser.css" as="style">
         <link rel="stylesheet" href="./css/browser.css">
         <script src="./js/jquery.min.js"></script>
