--- a/browser.html
+++ b/browser.html
@@ -14,7 +14,7 @@
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/browser.js"></script>
-        <script src="./js/browser/buttons.js"></script>
+        <script src="./js/browser/settings.js"></script>
         <script src="./js/browser/addressBar.js"></script>
     </head>
     <body>
