--- a/browser.html
+++ b/browser.html
@@ -15,6 +15,7 @@
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/browser.js"></script>
         <script src="./js/browser/settings.js"></script>
+        <script src="./js/browser/web-info.js"></script>
         <script src="./js/browser/addressBar.js"></script>
     </head>
     <body>
