--- a/browser.html
+++ b/browser.html
@@ -10,10 +10,11 @@
         <link rel="preload" href="./css/browser.css" as="style">
         <link rel="stylesheet" href="./css/browser.css">
         <script src="./js/jquery.min.js"></script>
-        <script src="./js/resolution.js"></script>
+        <script src="./js/ud/resolution.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/browser.js"></script>
+        <script src="./js/ud/domains.js"></script>
         <script src="./js/browser/settings.js"></script>
         <script src="./js/browser/web-info.js"></script>
         <script src="./js/browser/addressBar.js"></script>
