--- a/modal.html
+++ b/modal.html
@@ -15,6 +15,23 @@
     </head>
     <body>
         <div id="appstart" style="z-index: 100000000000; min-height: 100%; min-width: 100%; position: fixed; background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></div>
-        <div id="modal"></div>
+        <div id="modal" class="modal m-0" tabindex="-1">
+            <div class="modal-dialog m-0 h-100 w-100" style="max-height: 100%; max-width: 100%;">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Modal body text goes here.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="close-modal" class="btn btn-secondary">Close</button>
+                </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
