--- a/modal.html
+++ b/modal.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./css/all.min.css">
         <link rel="preload" href="./css/browser.css" as="style">
         <link rel="stylesheet" href="./css/browser.css">
+        <link rel="stylesheet" href="./css/modal.css">
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/modal.js"></script>
