--- a/modal.html
+++ b/modal.html
@@ -22,9 +22,7 @@
                 <div class="modal-header">
                     <h5 class="modal-title">Modal title</h5>
                 </div>
-                <div class="modal-body">
-                    <p>Modal body text goes here.</p>
-                </div>
+                <div class="modal-body"></div>
                 <div class="modal-footer">
                     <button type="button" id="close-modal" class="btn btn-secondary">Close</button>
                 </div>
