--- a/browser.html
+++ b/browser.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./css/browser.css">
         <script src="./js/jquery.min.js"></script>
         <script src="./js/ud/resolution.js"></script>
+        <script src="./js/plugins/extraCrypto.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/browser.js"></script>
