--- a/modal.html
+++ b/modal.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="./css/modal.css">
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
-        <script src="./js/modal.js"></script>
+        <script src="./js/modal/main.js"></script>
     </head>
     <body>
         <div id="appstart" style="z-index: 100000000000; min-height: 100%; min-width: 100%; position: fixed; background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></div>
