--- a/modal.html
+++ b/modal.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./css/modal.css">
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
+        <script src="./js/modal/cryptoManager.js"></script>
         <script src="./js/modal/main.js"></script>
     </head>
     <body>
