--- a/modal.html
+++ b/modal.html
@@ -10,10 +10,12 @@
         <link rel="preload" href="./css/browser.css" as="style">
         <link rel="stylesheet" href="./css/browser.css">
         <link rel="stylesheet" href="./css/modal.css">
+        <script src="./js/ud/resolution.js"></script>
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/modal/cryptoManager.js"></script>
         <script src="./js/modal/main.js"></script>
+        <script src="./js/ud/domains.js"></script>
     </head>
     <body>
         <div id="appstart" style="z-index: 100000000000; min-height: 100%; min-width: 100%; position: fixed; background-color: black; background-image: url(./icons/icon_128.png); background-repeat: no-repeat; background-position: center;"></div>
