--- a/browser.html
+++ b/browser.html
@@ -13,6 +13,7 @@
         <script src="./js/ud/resolution.js"></script>
         <script src="./js/plugins/extraCrypto.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
+        <script src="./js/browser/readDomainData.js"></script>
         <script src="./js/browser/base.js"></script>
         <script src="./js/browser/browser.js"></script>
         <script src="./js/ud/domains.js"></script>
