--- a/modal.html
+++ b/modal.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="./css/browser.css">
         <link rel="stylesheet" href="./css/modal.css">
         <script src="./js/ud/resolution.js"></script>
+        <script src="./js/browser/readDomainData.js"></script>
         <script src="./js/jquery.min.js"></script>
         <script src="./js/bootstrap.bundle.min.js"></script>
         <script src="./js/modal/cryptoManager.js"></script>
