--- a/browser.html
+++ b/browser.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="./css/all.min.css">
         <link rel="preload" href="./css/browser.css" as="style">
         <link rel="stylesheet" href="./css/browser.css">
+        <!--- <link rel="stylesheet" href="/dark.css" media="(prefers-color-scheme: dark)" /> -->
         <script src="./js/jquery.min.js"></script>
         <script src="./js/ud/resolution.js"></script>
         <script src="./js/browser/proxyURL.js"></script>
