--- a/modal.html
+++ b/modal.html
@@ -26,7 +26,7 @@
             <div class="modal-dialog border-0 m-0 h-100 w-100" style="max-height: 100%; max-width: 100%;">
                 <div class="modal-content border-0">
                 <div class="modal-header">
-                    <h5 class="modal-title">???</h5>
+                    <h5 class="modal-title noselect">???</h5>
                 </div>
                 <div class="modal-body"></div>
                 <div class="modal-footer">
